# GlibD

./: COPYING  README.md  dub.json  meson.build
src/: APILookup.txt  APILookupGLib.txt  APILookupGObject.txt  APILookupGio.txt  APILookupGioUnix.txt  APILookupGioWin32.txt
tests/: meson.build
tests/gobject/: DClosureTest.d  ObjectGTest.d  ValueTest.d  meson.build
